Smoothed some edges, fixed responsiveness, updated spacing

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -14,10 +14,9 @@
 html, body {
     height: 100%;
     margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     padding: 0;
+    display: flex;
+    flex-direction: column;
 }
 
 main, select, button {
@@ -27,19 +26,13 @@ main, select, button {
     border-radius: 10px;
 }
 
-main { /* make child element stack vertically */
-    display: flex;
-    flex-direction: column;
+main { /* make child element (main-container, which contains the form and the result div) stack vertically */
     align-items: center; /* center within container */
     text-align: center;
-    margin: 0;
+    margin: 20px auto;
     padding: 0;
     min-width: 90%;
-}
-
-/* all child elements of main (including select, button, divs) */
-main > * {
-    box-sizing: border-box; /* ensures consistent sizing, width & height, padding & border in each element */
+    width: 100%;
 }
 
 /* body main container with all in it */
@@ -48,6 +41,12 @@ main > * {
     flex-direction: column;
     width: 100%;
     max-width: 100%; /* prevents content overflow */
+    height: 100%;
+}
+
+/* all child elements of class="form-container" (div holdering the form only - not the result div) */
+.form-container > * {
+    box-sizing: border-box; /* ensures consistent sizing, width & height, padding & border in each element */
 }
 
 .form-contents-container {
@@ -55,12 +54,11 @@ main > * {
     flex-direction: column;
     width: 100%;
     align-items: center;
-    margin-bottom: 15px;
+    margin-bottom: 30px; /* space between the form and the result div */
 }
 
 /* div w/ result of button click */
 #eatery-result-container {
-    margin-top: 20px;
     width: 100%;
     height: 60px; /* flexible height for the res */ 
 }
@@ -96,37 +94,70 @@ h1 {
 
 /* computers */
 @media screen and (max-width: 900px) {
-    main {
-        transform: scale(0.9);
-        transform-origin: center;
+    h1 {
+        font-size: 85px;
+    }
+
+    main, select, button {
+        font-size: 45px;
+        font-family: "Poetsen One", sans-serif;
+        font-weight: 400;
+        border-radius: 10px;
     }
 }
 
 /* computers, tablets */
 @media screen and (max-width: 800px) {
-    main {
-        transform: scale(0.8);
-        transform-origin: center;
+    h1 {
+        font-size: 80px;
+    }
+
+    main, select, button {
+        font-size: 40px;
+        font-family: "Poetsen One", sans-serif;
+        font-weight: 400;
+        border-radius: 10px;
     }
 }
 
 /* tablets, mobile devices */
 @media screen and (max-width: 690px) {
-    main {
-        transform: scale(0.7);
+    h1 {
+        font-size: 75px;
+    }
+
+    main, select, button {
+        font-size: 35px;
+        font-family: "Poetsen One", sans-serif;
+        font-weight: 400;
+        border-radius: 10px;
     }
 }
 
 /* small screens, mobile devices */
-@media screen and (max-width: 500px) {
-    main {
-        transform: scale(0.5);
+@media screen and (max-width: 551px) {
+    h1 {
+        font-size: 70px;
+    }
+
+    main, select, button {
+        font-size: 30px;
+        font-family: "Poetsen One", sans-serif;
+        font-weight: 400;
+        border-radius: 10px;
     }
 }
 
 /* very small screens, mobile devices */
 @media screen and (max-width: 400px) {
-    main {
-        transform: scale(0.4);
+    h1 {
+        font-size: 65px;
+    }
+
+    main, select, button {
+        font-size: 25px;
+        font-family: "Poetsen One", sans-serif;
+        font-weight: 400;
+        border-radius: 10px;
     }
 }
